tdf#169168 sw letter spacing: extend it for multiportion lines

Enable custom letter spacing and glyph scaling for multiportion
lines, i.e. lines with emphasized and underlined words, or
lines hyphenated automatically or with soft hyphen etc.

For this, width of the text portions are modified temporarily
according to the actual available blank space of the lines
at processing the last text portion. Depending on the filling
of the text line with text portions during line breaking, portion
width data are changed back and forth.

Note: Letter spacing and scaling data are stored in SwLineLayout
instead of SwTextPortion.

Other fixes and changes:

– itrcrsr.cxx: text cursor position follows the custom letter
  spacing and custom glyph scaling applied in the line;

– itradj.cxx: at letter spacing, the enlarged blank space is
  removed after the last letter in the line, fixing jittering
  of the right side of the lines.

– guess.cxx: fix crashing during typing before a terminating
  text portion;

– portxt.cxx: fix bad letter spacing, when the line contains
  zero width characters (soft hyphen, zero-width space etc.);

– testTdf168351: extend test document, because compression is not
  applied in the last line any more. Note: this is likely not a
  problem (in fact, it's the opposite, because filling the last
  line completely can destroy the clear separation of the paragraphs,
  especially without first line indent).

– testTdf168251 and testTdf168448: adjust the tests according to
  the fixed line breaking.

Follow-up to commit 45ec7bd76196dcc60b4c2db2f6f00623ecbaf5a4
"tdf#168251 cui offapi xmloff sw glyph scaling: extend UNO/UX/ODF",
commit 3c53797210bf0a4e3ffb36ed2beac4d5ce229ff2
"tdf#167648 sw letter spacing: implement minimum letter spacing"
and commit f83a04c51056445bbf947a31c8c1866a5c30bef1
"tdf#167648 cui offapi xmloff sw: add DTP-feature maximum letter
spacing".

Change-Id: I7fc144d499b466ca42f5e1d81e9618fc3fb1f487
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193274
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>